--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,33 +1,82 @@
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t "hello"
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t("hello") %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# The following keys must be escaped otherwise they will not be retrieved by
-# the default I18n backend:
-#
+# The following keys must be escaped:
 # true, false, on, off, yes, no
-#
-# Instead, surround them with single quotes.
-#
-# en:
-#   "true": "foo"
-#
-# To learn more, please read the Rails Internationalization guide
-# available at https://guides.rubyonrails.org/i18n.html.
+# surround them with single quotes: 'true', 'false'
 
 en:
-  hello: "Hello world"
+  analytics:
+    index:
+      title: "Analytics"
+      today_button: "Today"
+      start_date: "Start date:"
+      end_date: "End date:"
+      appointments:
+        zero: "There are no appointments"
+        one: "There is 1 appointment"
+        other: "There are %{count} appointments"
+      distance:
+        title_html: "During this period, you drove <strong>%{@total_distance.round(2)} km and %{@total_time} minutes</strong> for <strong>%{@appointments.count}</strong> appointments"
+
+  appointments:
+    index:
+    new:
+      title: "New Appointment"
+      submit: "Create Appointment"
+      cancel: "Cancel"
+      date: "Date"
+      time: "Time"
+      location: "Location"
+      description: "Description"
+      submit_success: "Appointment successfully created."
+      submit_error: "Appointment could not be created."
+      cancel_success: "Appointment successfully canceled."
+      cancel_error: "Appointment could not be canceled."
+      date_error: "Please enter a valid date."
+      time_error: "Please enter a valid time."
+      location_error: "Please enter a valid location."
+      description_error: "Please enter a valid description."
+    show:
+
+  clients:
+    .edit:
+    .index:
+      title: "Clients"
+      submit: "Create Client"
+      cancel: "Cancel"
+      name: "Name"
+      email: "Email"
+      submit_success: "Client successfully created."
+      submit_error: "Client could not be created."
+      cancel_success: "Client successfully canceled."
+      cancel_error: "Client could not be canceled."
+      first_name_error: "Please enter a valid first name."
+      last_name_error: "Please enter a valid last name."
+      email_error: "Please enter a valid email."
+      email_taken: "This email is already taken."
+    .new:
+      .title: "New Client"
+      .submit: "Create Client"
+      cancel: "Cancel"
+      name: "Name"
+      email: "Email"
+    .show:
+
+  layouts:
+    application:
+    mailer:
+
+  pages:
+    home:
+
+  patients:
+    .edit:
+    .index:
+      title: "Patients"
+      submit: "Create Patient"
+      cancel: "Cancel"
+      name: "Name"
+      submit_success: "Patient successfully created."
+      submit_error: "Patient could not be created."
+      cancel_success: "Patient successfully canceled."
+      cancel_error: "Patient could not be canceled."
+    .new:
+    .show:
