add internationalization to appointments, patients and clients

--- a/config/locales/views/pages/it.yml
+++ b/config/locales/views/pages/it.yml
@@ -7,7 +7,7 @@ it:
       analytics: "Statistiche"
       patients: "Pazienti"
       clients: "Clienti"
-      export_data: "Esportare i miei apuntamenti"
+      export_data: "Esportare i miei appuntamenti"
       share_feedback: "Condivido il mio feedback"
       calcometer: "Calcometer"
       manage_ease: "Gestisci con facilità le tue distanze di viaggio, i tempi e gli appuntamenti."
@@ -19,7 +19,7 @@ it:
       distance_management_desc: "Calcoli automatici di distanza e tempo tra pazienti o clienti senza sforzo."
       safe_by_design: "Sicuro per progettazione"
       safe_by_design_desc: "I tuoi dati sono criptati in modo sicuro e protetti meticolosamente."
-      clutter_free_design: "Design senza ingombro"
+      clutter_free_design: "Design essenziale"
       clutter_free_design_desc: "Interfaccia intuitiva e familiare per un'esperienza piacevole."
       peace_of_mind: "Tranquillità"
       peace_of_mind_desc: "Semplifica le tue routine mentre navighi nelle tue attività quotidiane."
