--- a/config/locales/views/patients/fr.yml
+++ b/config/locales/views/patients/fr.yml
@@ -16,3 +16,26 @@ en:
       delete_patient: "Supprimer ce patient"
       confirm_delete: "Êtes-vous sûr ?"
       delete: "Supprimer"
+    form:
+      patient_name: "Nom du patient"
+      name_placeholder: " Monsieur Tout-le-monde"
+      street: "Rue"
+      street_placeholder: "Rue"
+      number: "Numéro"
+      number_placeholder: "Numéro"
+      zip_code: "Code Postal"
+      zip_code_placeholder: "Code Postal"
+      city: "Ville"
+      city_placeholder: "Ville"
+      state: "État"
+      state_placeholder: "État"
+      country: "Pays"
+      country_default: "Suisse"
+      select_client: "Qui est le client de ce patient?"
+      submit: "Valider et enregistrer"
+    new:
+      title: "Vous créez un nouveau patient"
+      back_to_patients: "Retour aux patients"
+    edit:
+      title: "Vous modifiez %{name}"
+      back_to_patients: "Retour aux patients"
