--- a/config/locales/views/patients/de.yml
+++ b/config/locales/views/patients/de.yml
@@ -16,3 +16,26 @@ en:
       delete_patient: "Diesen Patienten löschen"
       confirm_delete: "Bist du sicher?"
       delete: "Löschen"
+    form:
+      patient_name: "Patientenname"
+      name_placeholder: "Max Mustermann"
+      street: "Straße"
+      street_placeholder: "Straße"
+      number: "Nummer"
+      number_placeholder: "Nummer"
+      zip_code: "Postleitzahl"
+      zip_code_placeholder: "Postleitzahl"
+      city: "Stadt"
+      city_placeholder: "Stadt"
+      state: "Bundesland"
+      state_placeholder: "Bundesland"
+      country: "Land"
+      country_default: "Schweiz"
+      select_client: "Wer ist der Kunde dieses Patienten?"
+      submit: "Überprüfen und speichern"
+    new:
+      title: "Sie erstellen einen neuen Patienten"
+      back_to_patients: "Zurück zu Patienten"
+    edit:
+      title: "Sie bearbeiten %{name}"
+      back_to_patients: "Zurück zu Patienten"
