--- a/config/locales/views/patients/en.yml
+++ b/config/locales/views/patients/en.yml
@@ -16,3 +16,26 @@ en:
       delete_patient: "Delete this patient"
       confirm_delete: "Are you sure?"
       delete: "Delete"
+    form:
+      patient_name: "Nome del paziente"
+      name_placeholder: "Jane Doe"
+      street: "Via"
+      street_placeholder: "Via"
+      number: "Numero"
+      number_placeholder: "Numero"
+      zip_code: "CAP"
+      zip_code_placeholder: "CAP"
+      city: "Città"
+      city_placeholder: "Città"
+      state: "Stato"
+      state_placeholder: "Stato"
+      country: "Paese"
+      country_default: "Svizzera"
+      select_client: "Chi è il cliente di questo paziente?"
+      submit: "Convalida e salva"
+    new:
+      title: "Stai creando un nuovo paziente"
+      back_to_patients: "Torna ai pazienti"
+    edit:
+      title: "Stai modificando %{name}"
+      back_to_patients: "Torna ai pazienti"
