--- a/config/locales/views/patients/it.yml
+++ b/config/locales/views/patients/it.yml
@@ -15,4 +15,26 @@ it:
       edit_patient: "Modifica paziente"
       delete_patient: "Elimina questo paziente"
       confirm_delete: "Sei sicuro?"
-      delete: "Elimina"
+    form:
+      patient_name: "Nome del paziente"
+      name_placeholder: "Mario Rossi"
+      street: "Via"
+      street_placeholder: "Via"
+      number: "Numero"
+      number_placeholder: "Numero"
+      zip_code: "CAP"
+      zip_code_placeholder: "CAP"
+      city: "Città"
+      city_placeholder: "Città"
+      state: "Stato"
+      state_placeholder: "Stato"
+      country: "Paese"
+      country_default: "Svizzera"
+      select_client: "Chi è il cliente di questo paziente?"
+      submit: "Convalida e salva"
+    new:
+      title: "Stai creando un nuovo paziente"
+      back_to_patients: "Torna ai pazienti"
+    edit:
+      title: "Stai modificando %{name}"
+      back_to_patients: "Torna ai pazienti"
