--- a/config/locales/views/analytics/index.en.yml
+++ b/config/locales/views/analytics/index.en.yml
@@ -11,8 +11,8 @@ en:
       distance: "Distance"
       appointments: "Appointments"
       during_this_period: "During this period, you drove"
-      km_and_minutes: "km & %{time} minutes"
+      km_and_minutes: "%{distance} km & %{time} minutes"
       for_appointments: "for %{count} appointments"
-      appointments_amount: "Total %{appointments} appointments"
+      appointments_amount: "Total %{count} appointments"
       deleted_patient: "Deleted patient"
       minutes: "minutes"
