enhance and fix translations

--- a/config/locales/devise.views.fr.yml
+++ b/config/locales/devise.views.fr.yml
@@ -98,7 +98,7 @@ fr:
         cancel_my_account: Supprimer mon compte
         currently_waiting_confirmation_for_email: 'Confirmation en attente pour: %{email}'
         leave_blank_if_you_don_t_want_to_change_it: laissez ce champ vide pour le laisser inchangé
-        title: Éditer %{resource}
+        title: Modifier mon compte
         unhappy: Pas content ?
         update: Modifier
         we_need_your_current_password_to_confirm_your_changes: Nous avons besoin de votre mot de passe pour valider ces modifications
