--- a/config/locales/views/analytics/index.en.yml
+++ b/config/locales/views/analytics/index.en.yml
@@ -1,13 +1,11 @@
 en:
   analytics:
     index:
-      title: "Stats"
+      title: "All Appointments"
       today: "Today"
-      minus_one: "-1"
       start_date: "Start Date"
       end_date: "End Date"
       submit: "Submit"
-      plus_one: "+1"
       distance: "Distance"
       appointments: "Appointments"
       during_this_period: "During this period, you drove"
