--- a/config/locales/views/pages/de.yml
+++ b/config/locales/views/pages/de.yml
@@ -4,11 +4,11 @@ de:
       greeting: "Hallo, %{name}"
       today: "Heute ist %{date}"
       new_appointment: "Neuer Termin"
-      analytics: "Statistiken"
+      analytics: "Alle Termine"
       patients: "Alle Patienten"
       clients: "Alle Klienten"
       export_data: "Termine exportieren"
-      share_feedback: "Feedback teilen"
+      share_feedback: "Mein Kommentar teilen"
       calcometer: "Calcometer"
       manage_ease: "Verwalten Sie mit Leichtigkeit Ihre Reiseentfernungen, Zeiten und Terminpläne."
       sign_up: "Anmelden"
