--- a/config/locales/views/pages/it.yml
+++ b/config/locales/views/pages/it.yml
@@ -4,11 +4,11 @@ it:
       greeting: "Ciao, %{name}"
       today: "Oggi è %{date}"
       new_appointment: "Nuovo appuntamento"
-      analytics: "Statistiche"
+      analytics: "Tutti appuntamenti"
       patients: "Pazienti"
       clients: "Clienti"
       export_data: "Esportare appuntamenti"
-      share_feedback: "Condivido il mio feedback"
+      share_feedback: "Aiutaci a migliorare"
       calcometer: "Calcometer"
       manage_ease: "Gestisci con facilità le tue distanze di viaggio, i tempi e gli appuntamenti."
       sign_up: "Iscriviti"
