--- a/config/locales/views/patients/en.yml
+++ b/config/locales/views/patients/en.yml
@@ -16,26 +16,26 @@ en:
       delete_patient: "Delete this patient"
       confirm_delete: "Are you sure?"
       delete: "Delete"
-    form:
-      patient_name: "Nome del paziente"
-      name_placeholder: "Jane Doe"
-      street: "Via"
-      street_placeholder: "Via"
-      number: "Numero"
-      number_placeholder: "Numero"
-      zip_code: "CAP"
-      zip_code_placeholder: "CAP"
-      city: "Città"
-      city_placeholder: "Città"
-      state: "Stato"
-      state_placeholder: "Stato"
-      country: "Paese"
-      country_default: "Svizzera"
-      select_client: "Chi è il cliente di questo paziente?"
-      submit: "Convalida e salva"
     new:
-      title: "Stai creando un nuovo paziente"
-      back_to_patients: "Torna ai pazienti"
+      title: "You are creating a new patient"
+      back_to_patients: "Back to patients"
     edit:
-      title: "Stai modificando %{name}"
-      back_to_patients: "Torna ai pazienti"
+      title: "You are editing %{name}"
+      back_to_patients: "Back to patients"
+    form:
+      patient_name: "Patient Name"
+      name_placeholder: "Jane Doe"
+      street: "Address"
+      street_placeholder: "Address"
+      number: "Number"
+      number_placeholder: "Number"
+      zip_code: "ZIP"
+      zip_code_placeholder: "ZIP"
+      city: "City"
+      city_placeholder: "City"
+      state: "State"
+      state_placeholder: "State"
+      country: "Country"
+      country_default: "Svizzera"
+      select_client: "Whose company this patient belongs to?"
+      submit: "Save"
