--- a/config/locales/views/shared/navbar.en.yml
+++ b/config/locales/views/shared/navbar.en.yml
@@ -3,12 +3,12 @@ en:
     navbar:
       home: "Home"
       menu: "Menu"
-      appointments: "Appointments"
-      analytics: "Analytics"
+      appointments: "New appointment"
+      analytics: "All appointments"
       patients: "Patients"
       clients: "Clients"
       my_account: "My account"
-      edit_profile: "Edit profile"
+      edit_profile: "Edit account"
       log_out: "Log out"
       login: "Login"
       sign_up: "Sign-up"
