--- a/config/locales/views/shared/navbar.it.yml
+++ b/config/locales/views/shared/navbar.it.yml
@@ -3,11 +3,11 @@ it:
     navbar:
       home: "Home"
       menu: "Menu"
-      appointments: "Appuntamenti"
-      analytics: "Statistiche"
+      appointments: "Nuovo appuntamento"
+      analytics: "Tutti appuntamenti"
       patients: "Pazienti"
       clients: "Clienti"
-      my_account: "Il mio profilo"
+      my_account: "Profilo"
       edit_profile: "Modifica profilo"
       log_out: "Disconnetti"
       login: "Accedi"
