--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -223,3 +223,5 @@ de:
       long: "%A, %d. %B %Y, %H:%M Uhr"
       short: "%d. %b, %H:%M Uhr"
     pm: nachmittags
+  appointment_created_success: Der Termin wurde erfolgreich erstellt.
+  appointment_deleted_success: Der Termin wurde erfolgreich gelöscht.
