--- a/config/locales/devise.views.de.yml
+++ b/config/locales/devise.views.de.yml
@@ -100,7 +100,7 @@ de:
         cancel_my_account: Konto löschen
         currently_waiting_confirmation_for_email: Warte auf Bestätigung von %{email}.
         leave_blank_if_you_don_t_want_to_change_it: freilassen, wenn Sie das nicht ändern wollen
-        title: "%{resource} bearbeiten"
+        title: Mein Konto bearbeiten
         unhappy: Unzufrieden?
         update: Aktualisieren
         we_need_your_current_password_to_confirm_your_changes: Wir benötigen Ihr aktuelles Passwort, um die Änderung zu bestätigen
