--- a/config/locales/views/shared/navbar.fr.yml
+++ b/config/locales/views/shared/navbar.fr.yml
@@ -3,12 +3,12 @@ fr:
     navbar:
       home: "Accueil"
       menu: "Menu"
-      appointments: "Rendez-vous"
-      analytics: "Statistiques"
+      appointments: "Nouveau rendez-vous"
+      analytics: "Mes rendez-vous"
       patients: "Patients"
       clients: "Clients"
       my_account: "Mon compte"
-      edit_profile: "Modifier le profil"
+      edit_profile: "Modifier compte"
       log_out: "Se déconnecter"
       login: "Connexion"
       sign_up: "S'inscrire"
