--- a/config/locales/views/clients/it.yml
+++ b/config/locales/views/clients/it.yml
@@ -1,25 +1,25 @@
 it:
   clients:
     index:
-      title: "Tutti i clienti"
-      new_client: "Nuovo cliente"
+      title: "Tutti i organizzazioni"
+      new_client: "Nuovo organizzazione"
       footer:
-        zero: "Non ci sono clienti, vai a crearne uno"
-        one: "Hai un cliente"
-        other: "Hai %{count} clienti"
+        zero: "Non ci sono organizzazioni, vai a crearne uno"
+        one: "Hai un organizzazione"
+        other: "Hai %{count} organizzazioni"
     show:
       client_name: "%{name}"
       client_email: "%{email}"
       send_report: "Invia report mensile"
-      back_to_clients: "Ritorna ai clienti"
-      edit_client: "Modifica cliente"
-      delete_client: "Elimina cliente"
+      back_to_clients: "Ritorna ai organizzazioni"
+      edit_client: "Modifica organizzazione"
+      delete_client: "Elimina organizzazione"
     new:
-      new_client: "Stai creando un nuovo cliente"
-      back_to_clients: "Ritorna ai clienti"
+      new_client: "Stai creando un nuovo organizzazione"
+      back_to_clients: "Ritorna ai organizzazioni"
     edit:
       title: "Stai modificando %{name}"
-      back_to_clients: "Torna ai clienti"
+      back_to_clients: "Torna ai organizzazioni"
     client:
       client_name: "%{name}"
       client_email: "%{email}"
