--- a/config/locales/views/pages/de.yml
+++ b/config/locales/views/pages/de.yml
@@ -6,7 +6,7 @@ de:
       new_appointment: "Neuer Termin"
       analytics: "Alle Termine"
       patients: "Alle Patienten"
-      clients: "Alle Klienten"
+      clients: "Alle Organisationen"
       export_data: "Termine exportieren"
       share_feedback: "Mein Kommentar teilen"
       calcometer: "Calcometer"
@@ -16,7 +16,7 @@ de:
       calcometer_screenshot: "Screenshot der Calcometer-Homepage"
       why_calcometer: "Warum Calcometer?"
       distance_management: "Entfernungsmanagement"
-      distance_management_desc: "Mühelose automatische Entfernungs- und Zeitberechnungen zwischen Patienten oder Kunden."
+      distance_management_desc: "Mühelose automatische Entfernungs- und Zeitberechnungen zwischen Patienten oder Organisationen."
       safe_by_design: "Sicher durch Design"
       safe_by_design_desc: "Ihre Daten sind sicher verschlüsselt und sorgfältig geschützt."
       clutter_free_design: "Aufgeräumtes Design"
