--- a/config/locales/views/pages/fr.yml
+++ b/config/locales/views/pages/fr.yml
@@ -6,8 +6,8 @@ fr:
       new_appointment: "Nouveau rendez-vous"
       analytics: "Mes rendez-vous"
       patients: "Patients"
-      clients: "Clients"
-      export_data: "Exporter mes rendez-vous" 
+      clients: "Organisations"
+      export_data: "Exporter mes rendez-vous"
       share_feedback: "Partager mon avis"
       calcometer: "Calcometer"
       manage_ease: "Gérez facilement vos distances de voyage, vos temps et vos horaires de rendez-vous."
