--- a/config/locales/views/pages/it.yml
+++ b/config/locales/views/pages/it.yml
@@ -6,7 +6,7 @@ it:
       new_appointment: "Nuovo appuntamento"
       analytics: "Tutti appuntamenti"
       patients: "Pazienti"
-      clients: "Clienti"
+      clients: "Organizzazioni"
       export_data: "Esportare appuntamenti"
       share_feedback: "Aiutaci a migliorare"
       calcometer: "Calcometer"
@@ -16,7 +16,7 @@ it:
       calcometer_screenshot: "Screenshot della homepage di Calcometer"
       why_calcometer: "Perché Calcometer?"
       distance_management: "Gestione delle distanze"
-      distance_management_desc: "Calcoli automatici di distanza e tempo tra pazienti o clienti senza sforzo."
+      distance_management_desc: "Calcoli automatici di distanza e tempo tra pazienti o organizzazioni senza sforzo."
       safe_by_design: "Sicuro per progettazione"
       safe_by_design_desc: "I tuoi dati sono criptati in modo sicuro e protetti meticolosamente."
       clutter_free_design: "Design essenziale"
