--- a/config/locales/devise.views.fr.yml
+++ b/config/locales/devise.views.fr.yml
@@ -10,7 +10,7 @@ fr:
         current_sign_in_at: Date de la connexion actuelle
         current_sign_in_ip: IP de la connexion actuelle
         email: Email
-        name: Prénom
+        first_name: Prénom
         last_name: Nom
         encrypted_password: Mot de passe chiffré
         failed_attempts: Tentatives échouées
